Add sidebar and initial pages

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,11 @@
         font-size: 14px;
         color: #333;
         height: 100%;
+        overflow: hidden;
+      }
+
+      #container {
+        height: 100%;
       }
     </style>
     <% if (production) { %>
